Retrieve author_bio info from Body Response accordingly.